<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:windowSoftInputMode="stateHidden"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <Button
                android:id="@+id/btn_cadastrar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/btn_cadastrar"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_cadastro_cpf" />

            <EditText
                android:id="@+id/edit_cadastro_titulo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/white"
                android:hint="@string/titulo"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:singleLine="true"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/edit_cadastro_identidade"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_cadastro_nome"
                app:layout_constraintVertical_chainStyle="packed" />

            <EditText
                android:id="@+id/edit_cadastro_identidade"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/white"
                android:hint="@string/identidade"
                android:importantForAutofill="no"
                android:inputType="textPersonName|number"
                android:maxLength="10"
                android:singleLine="true"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/edit_cadastro_cpf"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_cadastro_titulo" />

            <EditText
                android:id="@+id/edit_cadastro_cpf"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/white"
                android:hint="@string/cpf"
                android:importantForAutofill="no"
                android:inputType="number"
                android:singleLine="true"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/btn_cadastrar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_cadastro_identidade" />

            <EditText
                android:id="@+id/edit_cadastro_nome"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/white"
                android:hint="@string/nome"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:singleLine="false"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/edit_cadastro_titulo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_cadastro_foto"
                app:layout_constraintVertical_chainStyle="packed" />

            <ImageView
                android:id="@+id/edit_cadastro_foto"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/foto_para_cadastro"
                android:src="@drawable/ic_person"
                app:layout_constraintBottom_toTopOf="@+id/edit_cadastro_nome"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                app:srcCompat="@drawable/ic_person" />

            <ProgressBar
                android:id="@+id/progressbar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:max="100"
                android:minWidth="50dp"
                android:minHeight="50dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>